Mark `ENABLE_CCACHE` option as deprecated and turn it into a NOOP
Signed-off-by: Steffen Jaeckel <s@jaeckel.eu>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,18 +33,8 @@ include(sources.cmake)
 #-----------------------------------------------------------------------------
 option(BUILD_SHARED_LIBS "Build shared library and only the shared library if \"ON\", default is static" OFF)
 
-#-----------------------------------------------------------------------------
-# Add support for ccache if desired
-#-----------------------------------------------------------------------------
-find_program(CCACHE ccache)
-
-if(CCACHE)
-    option(ENABLE_CCACHE "Enable ccache." ON)
-endif()
-
-# use ccache if installed
-if(CCACHE AND ENABLE_CCACHE)
-    set(CMAKE_C_COMPILER_LAUNCHER ${CCACHE})
+if(ENABLE_CCACHE)
+    message(DEPRECATION "The 'ENABLE_CCACHE' option is deprecated and is a NOOP now. It will be removed in the next major version")
 endif()
 
 #-----------------------------------------------------------------------------
